RESOLVED FIXED106064
REGRESSION(r111439): Focus ring is rendered incorrectly in fast/inline/continuation-outlines-with-layers.html
https://bugs.webkit.org/show_bug.cgi?id=106064
Summary REGRESSION(r111439): Focus ring is rendered incorrectly in fast/inline/contin...
Ryosuke Niwa
Reported 2013-01-03 16:10:33 PST
Created attachment 181248 [details] Actual Image See the attached image. Outline ring is painted incorrectly.
Attachments
Actual Image (32.82 KB, image/png)
2013-01-03 16:10 PST, Ryosuke Niwa
no flags
Patch (35.14 KB, patch)
2013-01-07 14:21 PST, Robert Hogan
no flags
Ryosuke Niwa
Comment 1 2013-01-03 16:18:55 PST
Updated test expectations in http://trac.webkit.org/changeset/138761.
Radar WebKit Bug Importer
Comment 2 2013-01-03 16:19:13 PST
Simon Fraser (smfr)
Comment 3 2013-01-03 16:40:22 PST
When did this regress?
Ryosuke Niwa
Comment 4 2013-01-03 16:44:04 PST
(In reply to comment #3) > When did this regress? No idea. The test had been skipped until I removed it from TestExpectations file in http://trac.webkit.org/changeset/138734 since the bug associated with it had been resolved :(
Ryosuke Niwa
Comment 5 2013-01-03 17:06:55 PST
It appears to be a regression from http://trac.webkit.org/changeset/111439.
Ryosuke Niwa
Comment 6 2013-01-03 17:07:58 PST
From the change log of r111439: ​https://trac.webkit.org/changeset/108185/ allowed anonymous blocks to get their own layer (when they're relatively positioned). This broke the dependency in addContinuationWithOutline() on the owner of the continuation table and the renderer getting added to it always being in the same layer. When they're not in the same layer there's no guarantee that the owner of the continuation table will get painted again and so avoid any stale pointers in its continuation table should any of the renderers in there get destroyed. Fix this for now by only adding renderers to the containing block's continuation table if we don't have our own layer. This fix causes fast/inline/continuation-outlines-with-layers.html to regress as it uses blocks inside relatively positioned inlines, so skip it on all platforms pending a medium-term fix.
Robert Hogan
Comment 7 2013-01-04 01:25:19 PST
*** Bug 81819 has been marked as a duplicate of this bug. ***
Robert Hogan
Comment 8 2013-01-07 14:21:38 PST
Build Bot
Comment 9 2013-01-07 16:06:27 PST
Comment on attachment 181565 [details] Patch Attachment 181565 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15739912 New failing tests: fast/inline/continuation-outlines-with-layers.html
Robert Hogan
Comment 10 2013-01-08 11:03:55 PST
(In reply to comment #9) > (From update of attachment 181565 [details]) > Attachment 181565 [details] did not pass mac-ews (mac): > Output: http://queues.webkit.org/results/15739912 > > New failing tests: > fast/inline/continuation-outlines-with-layers.html This is a text-only failure and the change in behaviour will only show up on the pixel results. Mac's RenderTree results for this are out of date, and have missed updates for sub-pixel rebaselines at the very least.
Dave Hyatt
Comment 11 2013-01-09 12:18:47 PST
Comment on attachment 181565 [details] Patch Test results don't look right? Shouldn't the before merge in rather than painting separately?
Robert Hogan
Comment 12 2013-01-09 12:21:51 PST
(In reply to comment #11) > (From update of attachment 181565 [details]) > Test results don't look right? Shouldn't the before merge in rather than painting separately? It has always rendered this way in Chromium as far as I can tell, e.g.: http://trac.webkit.org/browser/trunk/LayoutTests/platform/chromium-linux/fast/inline/continuation-outlines-with-layers-expected.png?rev=84406
Dave Hyatt
Comment 13 2013-01-09 12:23:43 PST
Comment on attachment 181565 [details] Patch r=me, but make sure we get a bug filed on the fact that the Chromium Linux results are wrong-looking.
WebKit Review Bot
Comment 14 2013-01-09 12:32:03 PST
Comment on attachment 181565 [details] Patch Clearing flags on attachment: 181565 Committed r139223: <http://trac.webkit.org/changeset/139223>
WebKit Review Bot
Comment 15 2013-01-09 12:32:09 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.