REGRESSION(r111439): Focus ring is rendered incorrectly in fast/inline/continuation-outlines-with-layers.html https://bugs.webkit.org/show_bug.cgi?id=106064

Reviewed by David Hyatt.

Source/WebCore:

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintObject):

LayoutTests:

* platform/chromium-linux/fast/inline/continuation-outlines-with-layers-expected.png:


Canonical link: https://commits.webkit.org/124672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139223 268f45cc-cd09-0410-ab3c-d52691b4dbfc